[package]
authors = ["yubrot <yubrot@gmail.com>"]
description = "llrl compiler implementation"
edition = "2021"
keywords = ["compiler"]
license = "BSD-3-Clause"
name = "llrl0"
repository = "https://github.com/yubrot/llrl"
version = "0.1.0"

[lib]
name = "llrl"

[features]
chibi-backend = ["xten0"]
default = ["llvm-backend", "chibi-backend"]
llvm-backend = ["llvm0"]

[dependencies]
clap = "2"
crossbeam-channel = "0.5"
derive-new = "0.5"
either = "1"
if_chain = "1"
itertools = "0.10"
llrt = {path = "../rt"}
llstd = {path = "../std"}
llvm0 = {path = "../llvm0", optional = true}
memoffset = "0.6"
once_cell = "1"
ordered-float = "2"
rayon = "1"
regex = "1"
smallvec = "1"
tempfile = "3"
thiserror = "1"
typed-arena = "2"
xten0 = {path = "../xten0", optional = true}
