[package]
authors = ["yubrot <yubrot@gmail.com>"]
description = "A library for x64 machine-code generation and JIT compilation"
edition = "2021"
license = "BSD-3-Clause"
name = "xten0"
repository = "https://github.com/yubrot/llrl"
version = "0.1.0"

[lib]
name = "xten"

[dependencies]
byteorder = "1"
derive-new = "0.5"
heapless = "0.7"

[dev-dependencies]
once_cell = "1"
regex = "1"
tempfile = "3"
